--- a/index.html
+++ b/index.html
@@ -118,19 +118,19 @@
           All
         </button>
         <button class="popularFoodsFiltersBtn">
-          <img src="/assets/sushi-9.png" alt="sushi 9" />
+          <img src="./assets/sushi-9.png" alt="sushi 9" />
           Sushi
         </button>
         <button class="popularFoodsFiltersBtn">
-          <img src="/assets/sushi-8.png" alt="sushi 8" />
+          <img src="./assets/sushi-8.png" alt="sushi 8" />
           Ramen
         </button>
         <button class="popularFoodsFiltersBtn">
-          <img src="/assets/sushi-7.png" alt="sushi 7" />
+          <img src="./assets/sushi-7.png" alt="sushi 7" />
           Udon
         </button>
         <button class="popularFoodsFiltersBtn">
-          <img src="/assets/sushi-6.png" alt="sushi 6" />
+          <img src="./assets/sushi-6.png" alt="sushi 6" />
           Dango
         </button>
         <button class="popularFoodsFiltersBtn">Delever</button>
@@ -139,13 +139,13 @@
         <article class="popularFoodsCard" data-aos="fade-up">
           <img
             class="popularFoodsCardImag"
-            src="assets/sushi-12.png"
+            src="./assets/sushi-12.png"
             alt="sushi 12"
           />
           <h4 class="popularFoodsCardTitle">Chezu Sushi</h4>
           <div class="popularFoodsCardDetails flex-between">
             <div class="popularFoodsCardRating">
-              <img src="assets/star.svg" alt="star" />
+              <img src="./assets/star.svg" alt="star" />
               <p>4.9</p>
               <div>
                 <p class="popularFoodsCardPrice">$21.00</p>
@@ -156,13 +156,13 @@
         <article class="popularFoodsCardActiveCard" data-aos="fade-up">
           <img
             class="popularFoodsCardImag"
-            src="assets/sushi-11.png"
+            src="./assets/sushi-11.png"
             alt="sushi 11"
           />
           <h4 class="popularFoodsCardTitle">Riginal Sushi</h4>
           <div class="popularFoodsCardDetails flex-between">
             <div class="popularFoodsCardRating">
-              <img src="assets/star.svg" alt="star" />
+              <img src="./assets/star.svg" alt="star" />
               <p>5.0</p>
               <div>
                 <p class="popularFoodsCardPrice">$32.00</p>
@@ -173,13 +173,13 @@
         <article class="popularFoodsCard" data-aos="fade-up">
           <img
             class="popularFoodsCardImag"
-            src="assets/sushi-10.png"
+            src="./assets/sushi-10.png"
             alt="sushi 10"
           />
           <h4 class="popularFoodsCardTitle">Ramen Legend</h4>
           <div class="popularFoodsCardDetails flex-between">
             <div class="popularFoodsCardRating">
-              <img src="assets/star.svg" alt="star" />
+              <img src="./assets/star.svg" alt="star" />
               <p>4.9</p>
               <div>
                 <p class="popularFoodsCardPrice">$13.00</p>
@@ -204,37 +204,37 @@
           <ul class="trendingList flex-between">
             <li>
               <div class="trendingIcon flex-center">
-                <img src="assets/check.svg" alt="check" />
+                <img src="./assets/check.svg" alt="check" />
               </div>
               <p>Make Sushi</p>
             </li>
             <li>
               <div class="trendingIcon flex-center">
-                <img src="assets/check.svg" alt="check" />
+                <img src="./assets/check.svg" alt="check" />
               </div>
               <p>Make Sushi</p>
             </li>
             <li>
               <div class="trendingIcon flex-center">
-                <img src="assets/check.svg" alt="check" />
+                <img src="./assets/check.svg" alt="check" />
               </div>
               <p>Oshizushi</p>
             </li>
             <li>
               <div class="trendingIcon flex-center">
-                <img src="assets/check.svg" alt="check" />
+                <img src="./assets/check.svg" alt="check" />
               </div>
               <p>Uramaki Sushi</p>
             </li>
             <li>
               <div class="trendingIcon flex-center">
-                <img src="assets/check.svg" alt="check" />
+                <img src="./assets/check.svg" alt="check" />
               </div>
               <p>Temaki Sushi</p>
             </li>
             <li>
               <div class="trendingIcon flex-center">
-                <img src="assets/check.svg" alt="check" />
+                <img src="./assets/check.svg" alt="check" />
               </div>
               <p>Inari Sushi</p>
             </li>
@@ -242,15 +242,15 @@
         </div>
         <div class="trendingImag flex-center">
           <img
-            src="assets/sushi-5.png"
+            src="./assets/sushi-5.png"
             alt="sushi-5"
             data-aos="fade-down-left"
           />
           <div class="trendingArrow trendingArrowLeft">
-            <img src="assets/arrow-vertical.svg" alt="arrow vertical" />
+            <img src="./assets/arrow-vertical.svg" alt="arrow vertical" />
           </div>
           <div class="trendingArrow trendingArrowBottom">
-            <img src="assets/arrow-horizontal.svg" alt="arrow horizontal" />
+            <img src="./assets/arrow-horizontal.svg" alt="arrow horizontal" />
           </div>
         </div>
       </section>
@@ -260,15 +260,15 @@
       <section class="trendingDrink">
         <div class="trendingImag flex-center">
           <img
-            src="assets/sushi-4.png"
+            src="./assets/sushi-4.png"
             alt="sushi-4"
             data-aos="fade-up-right"
           />
           <div class="trendingArrow trendingArrowTop">
-            <img src="assets/arrow-horizontal.svg" alt="arrow horizantal" />
+            <img src="./assets/arrow-horizontal.svg" alt="arrow horizantal" />
           </div>
           <div class="trendingArrow trendingArrowRight">
-            <img src="assets/arrow-vertical.svg" alt="arrow vertical" />
+            <img src="./assets/arrow-vertical.svg" alt="arrow vertical" />
           </div>
         </div>
         <div class="trendingContent" data-aos="fade-up-left">
@@ -278,37 +278,37 @@
           <ul class="trendingList flex-between">
             <li>
               <div class="trendingIcon flex-center">
-                <img src="assets/check.svg" alt="check" />
+                <img src="./assets/check.svg" alt="check" />
               </div>
               <p>Make Sushi</p>
             </li>
             <li>
               <div class="trendingIcon flex-center">
-                <img src="assets/check.svg" alt="check" />
+                <img src="./assets/check.svg" alt="check" />
               </div>
               <p>Make Sushi</p>
             </li>
             <li>
               <div class="trendingIcon flex-center">
-                <img src="assets/check.svg" alt="check" />
+                <img src="./assets/check.svg" alt="check" />
               </div>
               <p>Oshizushi</p>
             </li>
             <li>
               <div class="trendingIcon flex-center">
-                <img src="assets/check.svg" alt="check" />
+                <img src="./assets/check.svg" alt="check" />
               </div>
               <p>Uramaki Sushi</p>
             </li>
             <li>
               <div class="trendingIcon flex-center">
-                <img src="assets/check.svg" alt="check" />
+                <img src="./assets/check.svg" alt="check" />
               </div>
               <p>Temaki Sushi</p>
             </li>
             <li>
               <div class="trendingIcon flex-center">
-                <img src="assets/check.svg" alt="check" />
+                <img src="./assets/check.svg" alt="check" />
               </div>
               <p>Inari Sushi</p>
             </li>
@@ -341,13 +341,13 @@
       </ul>
       <ul class="footerSocial">
         <li class="flex-center">
-          <img src="assets/facebook.svg" alt="facebook" />
+          <img src="./assets/facebook.svg" alt="facebook" />
         </li>
         <li class="flex-center">
-          <img src="assets/instagram.svg" alt="instagram" />
+          <img src="./assets/instagram.svg" alt="instagram" />
         </li>
         <li class="flex-center">
-          <img src="assets/twitter.svg" alt="twitter" />
+          <img src="./assets/twitter.svg" alt="twitter" />
         </li>
       </ul>
     </footer>
