--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/png" href="/public/sushi.png" />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="icon" type="image/png" href="./public/sushi.png" />
+    <link rel="stylesheet" href="./CSS/style.css" />
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <title>Sushiman</title>
   </head>
@@ -31,11 +31,11 @@
           <li>
             <a href="#aboutUs">About Us</a>
           </li>
-          <img src="assets/search.svg" alt="search" />
+          <img src="./assets/search.svg" alt="search" />
         </ul>
         <ul class="headerMenuMobile">
           <li>
-            <img src="assets/menu.svg" alt="menu" />
+            <img src="./assets/menu.svg" alt="menu" />
           </li>
         </ul>
       </nav>
@@ -44,7 +44,7 @@
     <!--------------------Start: hero Section----------------->
     <section class="hero">
       <div class="heroImage">
-        <img src="assets/sushi-1.png" alt="sushi" data-aos="fade-down-right" />
+        <img src="./assets/sushi-1.png" alt="sushi" data-aos="fade-down-right" />
         <h2 data-aos="fade-up">
           共 <br />
           大 <br />
@@ -62,7 +62,7 @@
           <div class="heroContentButtons">
             <button class="heroContentOrderButton">Order Now</button>
             <button class="heroContentPlayButton">
-              <img src="assets/play-circle.svg" alt="play" />
+              <img src="./assets/play-circle.svg" alt="play" />
               How to Order
             </button>
           </div>
@@ -74,7 +74,7 @@
             <p>Happy Customers</p>
           </div>
           <div class="heroContentReview">
-            <img src="assets/user.png" alt="user" />
+            <img src="./assets/user.png" alt="user" />
             <p>
               This is the best Japanese food delivery service tat ever existed.
             </p>
@@ -87,14 +87,14 @@
     <section class="aboutUs" id="aboutUs">
       <div class="aboutUsImage">
         <div class="aboutUsImageSushi3">
-          <img src="assets/sushi-3.png" alt="sushi" data-aos="zoom-in" />
+          <img src="./assets/sushi-3.png" alt="sushi" data-aos="zoom-in" />
         </div>
         <button class="aboutUsButton">
           Learn More
-          <img src="assets/arrow-up-right.svg" alt="leatn more" />
+          <img src="./assets/arrow-up-right.svg" alt="leatn more" />
         </button>
         <div class="aboutUsImageSushi2">
-          <img src="assets/sushi-2.png" alt="sushi" data-aos="zoom-in" />
+          <img src="./assets/sushi-2.png" alt="sushi" data-aos="zoom-in" />
         </div>
       </div>
       <div class="aboutUsContent">
